--- a/public/after5default.css
+++ b/public/after5default.css
@@ -186,7 +186,6 @@ body {
     height: 33px;
     margin-top: 0px;
     font-size: larger;
-    font-weight: normal;
     text-align: right;
     padding-top: 5px;
     padding-right: 30px;
@@ -207,7 +206,8 @@ body {
     color: #1a3721;
     font-family: Verdana Bold;
     font-size: large;
-    font-weight: normal;
+    margin-top: 0px;
+    margin-bottom: 5px;
 }
 
 #content_container h3 {
@@ -219,13 +219,8 @@ body {
     color: #1a3721;
     padding: 10px;
     font-size: medium;
-    font-weight: normal;
     clear: both;
     list-style-type: square;
-}
-
-#content_container h3 .a {
-    margin-right; 15px;
 }
 
 #content_container h4 {
@@ -233,13 +228,16 @@ body {
     color: #222;
     font-family: Verdana Bold;
     font-size: small;
-    font-weight: normal;
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
 
 #content_container p {
+
     width: 98%;
     font-weight: normal;
     font-size: small;
+    margin-top: 12px;
 }
 
 #content_container hr {
@@ -788,7 +786,7 @@ body {
     clear: both;
     display: block;
     text-align: right;
-    margin-right: 25px;
+    margin-right: 45px;
     padding: 10px;
     float: right;
 }
