I've made some updates to how social content is shared. See Issue #13. Although this kind of enhancement is really best mentioned in Issue #24.

--- a/public/after5default.css
+++ b/public/after5default.css
@@ -670,6 +670,14 @@ body {
     font-weight: bold;
 }
 
+#content_container .block_analytics {
+
+    /*color: #222;*/
+    font-family: Verdana;
+    font-size: 10px;
+    font-weight: normal;
+}
+
 #content_container .block_text {
     
     font-size: 10px;
