I've done some work on #51.

--- a/public/default.css
+++ b/public/default.css
@@ -214,7 +214,8 @@ body {
     font-family: Verdana;
     font-size: larger;
     font-weight: bold;
-    margin-top: 0px;
+    margin-top: -5px;
+    padding-top: 0px;
     margin-bottom: 5px;
 }
 
