--- a/public/default.css
+++ b/public/default.css
@@ -214,8 +214,7 @@ body {
     font-family: Verdana;
     font-size: larger;
     font-weight: bold;
-    margin-top: -5px;
-    padding-top: 0px;
+    margin-top: 0px;
     margin-bottom: 5px;
 }
 
@@ -1056,6 +1055,8 @@ body {
     width: 218px;
     height: 135px;
     margin: 0px 0px 10px 0;
+    border: 1px solid #1a3721; 
+
     
 }
 
