--- a/public/default.css
+++ b/public/default.css
@@ -376,7 +376,8 @@ body {
     margin-bottom: 10px;
     width: 400px;
     height: auto;
-    border: 1px solid #1a3721; 
+    border: 1px solid #1a3721;
+    cursor: pointer;
 
 }
 
