--- a/public/default.css
+++ b/public/default.css
@@ -1021,6 +1021,16 @@ body {
 
 }
 
+#content_container .content_wide {
+
+    width: auto;
+    background-color: white;
+    border-left: 25px solid white;
+    border-right: 25px solid white;
+    min-height: 300px;
+
+}
+
 #content_container .content_left span {
 
     color: #263c27;
