--- a/public/default.css
+++ b/public/default.css
@@ -231,6 +231,9 @@ body {
     font-weight: bold;
     clear: both;
     list-style-type: square;
+     border-radius: 0 0 3px 3px;
+    -moz-border-radius: 0 0 3px 3px;
+    -webkit-border-radius: 0 0 3px 3px;
 }
 
 #content_container h4 {
@@ -721,6 +724,12 @@ body {
     
 }
 
+#content_container .upcoming_events_box {
+    background-color: #E6E2E3; padding: 15px 0px 5px 5px; width: 99.9%;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
 #content_container .upcoming_events_title {
 
     color: #222;
@@ -1019,11 +1028,17 @@ body {
 
     text-align: center;
     margin-bottom: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
     background-color: #e6e2e3;
     padding-top: 10px;
     padding-bottom: 8px;
-    border-left: 5px solid white;
+/*    border-left: 5px solid white;
     border-right: 5px solid white;
+*/    
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
 }
 
 #content_container .ad_space_block {
@@ -1084,6 +1099,10 @@ body {
     background-color: #e6e2e3;
     border-right: 25px solid white;
     min-height: 500px;
+    
+    border-radius: 7px;
+    -moz-border-radius: 7px;
+    -webkit-border-radius: 7px;
 
 }
 
