--- a/public/default.css
+++ b/public/default.css
@@ -320,6 +320,9 @@ body {
     margin-left: 25px;
     width: 200px;
     background-color: #e6e2e3;
+    border-radius: 0 25px 7px 7px;
+    -moz-border-radius: 0 25px 7px 7px;
+    -webkit-border-radius: 0 25px 7px 7px;
 }
 
 #content_container .content_work_left p {
@@ -1122,12 +1125,14 @@ body {
     float: right;
     width: 30%;
     background-color: #e6e2e3;
-    border-right: 25px solid white;
+/*    border-right: 25px solid white;
+    */
+    margin-right: 25px;
     min-height: 500px;
     
-    border-radius: 7px;
-    -moz-border-radius: 7px;
-    -webkit-border-radius: 7px;
+    border-radius: 7px 25px 7px 7px;
+    -moz-border-radius:7px 25px 7px 7px;
+    -webkit-border-radius: 7px 25px 7px 7px;
 
 }
 
