--- a/public/default.css
+++ b/public/default.css
@@ -1,42 +1,12 @@
-/* Verdana */
-@font-face {
-
-    font-family: Verdana;
-    font-weight: normal;
-    font-style: normal;
-    src: url("/fonts/Verdana.ttf");
-}
-
-/* Verdana Italic*/
-@font-face {
-
-    font-family: Verdana Italic;
-    font-weight: normal;
-    font-style: italic;
-    src: url("/fonts/VerdanaItalic.ttf");
-}
-
-/* Verdana Bold */
-@font-face {
-
-    font-family: Verdana Bold;
-    font-weight: bold;
-    font-style: normal;
-    src: url("/fonts/VerdanaBold.ttf");
-}
-
-/* Verdana Bold Italic*/
-@font-face {
-
-    font-family: Verdana Bold Italic;
-    src: url("/fonts/VerdanaBoldItalic.ttf");
-}
+@import url(http://fonts.googleapis.com/css?family=Nothing+You+Could+Do);
+@import url(http://fonts.googleapis.com/css?family=Gruppo);
+@import url(http://fonts.googleapis.com/css?family=Cousine:400,700,400italic,700italic);
 
 body {
 
-    background-color: #222;
+    font-family: 'Cousine', sans-serif;
+    background-color: black;
     width: 1080px;
-    font-family: Verdana;
     font-size:100%;
     overflow-x: hidden;
     margin:0px auto;
@@ -54,7 +24,9 @@ img {
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
 }
-
+p {
+    font-family: 'Cousine', sans-serif;
+}
 #share_twitter {
     
     background-image: url('/share/Twitter.png');
@@ -91,23 +63,32 @@ img {
 
 #header_container {
 
-    background-image: url('/HeaderBground.png');
-    background-color: #FFFFFF;
-    background-repeat: no-repeat;
+    /*background-image: url('/HeaderBground.png');
+    */background-color: #FFFFFF;
+/*    background-image: url('http://fc04.deviantart.net/fs36/i/2008/285/e/3/Water_Mountains_by_UltimateAlexDancer.png');
+*/    background-repeat: no-repeat;
     text-align: left;
     cursor: pointer;
-    height: 100px;
+    height: 60px;
     border-radius: 5px 5px 0 0;
     -moz-border-radius: 5px 5px 0 0;
     -webkit-border-radius: 5px 5px 0 0;
 
 }
 
+#header_container h1 {
+    float: left;
+    font-family: 'Nothing You Could Do', cursive;
+    font-size: 25px;
+    margin-left: 10px;
+}
+
 #header_container h2 {
 
     float: right;
-    color: #8bc53e;
-    font-size: 35px;
+    font-family: 'Gruppo', cursive;
+    color: grey;
+    font-size: 15px;
     font-weight: lighter;
     padding-right: 15px;
 
@@ -115,8 +96,10 @@ img {
 
 #navigation_container {
 
-    background-image: url('/NavigationBground.png');
-    background-color: white;
+/*    background-image: url('/NavigationBground.png');
+*/
+    background-color: black;
+    font-family: 'Gruppo', cursive;
     text-align: left;
     height: 36px;
     font-family: Verdana;
@@ -125,15 +108,14 @@ img {
 }
 
 #navigation_container ul {
-
+font-family: 'Gruppo', cursive;
     list-style: none;
-    padding-left: 55px;
-    margin: 0px;
+    margin-left: 15px;
 
 }
 
 #navigation_container li {
-
+font-family: 'Gruppo', cursive;
     float: left;
     position: relative;
     font-size: 1em;
@@ -142,7 +124,7 @@ img {
 }
 
 #navigation_container a {
-
+font-family: 'Gruppo', cursive;
     display: block;
     padding: 8px 25px 0 25px;
     color: #ffffff;
@@ -150,18 +132,18 @@ img {
 }
 
 #navigation_container a:hover {
-
+font-family: 'Gruppo', cursive;
     display: block;
     padding: 8px 25px 0 25px;
     margin: 0px;
-    color: #ffffff;
+    color: white;
     height: 28px;
-    background-color: #8dc73f;
+    background-color: grey;
     text-decoration: none;
 }
 
 #navigation_container a:visited {
-
+font-family: 'Gruppo', cursive;
     display: block;
     color: white;
     text-decoration: none;
@@ -170,14 +152,14 @@ img {
 /* search form */
 
 #navigation_container .search_form {
-
+font-family: 'Gruppo', cursive;
     text-align: right;
     padding-top: 6.2px;
 
 }
 
 #navigation_container .search_input_text {
-
+font-family: 'Gruppo', cursive;
     verticle-align: middle;
     color: white;
     border: none;
@@ -187,7 +169,7 @@ img {
     font-color: #f2ffda;
     font-size: 0.75em;
     font-weight: lighter;
-    background-color: #8bc53e;
+    background-color: grey;
     border-radius: 2px 0 0 2px;
     -moz-border-radius: 2px 0 0 2px;
     -webkit-border-radius: 2px 0 0 2px;
@@ -218,9 +200,10 @@ img {
 
 #content_container h1 {
 
-    font-family: Verdana;
-    background-image: url('/HeadlineSplatter.png');
-    background-repeat: no-repeat;
+font-family: 'Gruppo', cursive;
+
+/*    background-image: url('/HeadlineSplatter.png');
+*/    /*background-repeat: no-repeat;*/
     background-position: right;
     color: white;
     width: 91%;
@@ -232,7 +215,7 @@ img {
     vertical-align: middle;
     padding-top: 0.4em;
     padding-right: 30px;
-    background-color: #1a3721;
+    background-color: black;
     border-radius: 0 25px 25px 0;
     -moz-border-radius: 0 25px 25px 0;
     -webkit-border-radius: 0 25px 25px 0;
@@ -246,9 +229,9 @@ img {
 
 #content_container h2 {
 
-    color: #1a3721;
-    font-family: Verdana;
-    font-size: larger;
+    color: black;
+font-family: 'Gruppo', cursive;
+font-size: larger;
     font-weight: bold;
     margin-top: 0px;
     margin-bottom: 5px;
@@ -256,11 +239,13 @@ img {
 
 #content_container h3 {
 
+font-family: 'Gruppo', cursive;
+
     width: 98%;
     height: 18px;
-    border-top: 1px solid #1a3721;
+    border-top: 1px solid black;
     background-color: #e6e2e3;
-    color: #1a3721;
+    color: black;
     padding: 10px;
     font-size: 1em;
     font-weight: bold;
@@ -274,8 +259,8 @@ img {
 #content_container h4 {
 
     color: #222;
-    font-family: Verdana;
-    font-weight: bold;
+font-family: 'Gruppo', cursive;
+font-weight: bold;
     font-size: small;
     margin-top: 0px;
     margin-bottom: 10px;
@@ -283,6 +268,7 @@ img {
 
 #content_container p {
 
+font-family: 'Cousine', sans-serif;
     width: 98%;
     font-weight: normal;
     font-size: small;
@@ -292,8 +278,8 @@ img {
 #content_container hr {
 
     clear: both;
-    color: #1a3721;
-    background-color: #1a3721;
+    color: black;
+    background-color: black;
     height: 1px;
     border: 0px;
     width: 100%;
@@ -306,81 +292,8 @@ img {
     width: 250px;
     height: auto;
     margin: 0px 10px 10px 0;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
    
-}
-
-/* work */
-
-#content_container .work_image_left {
-    
-    float: left;
-    margin-right: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #1a3721; 
-    width: 150px; height: 100px;
-
-}
-
-#content_container .work_content_title {
-
-    color: #1a3721;
-    font-family: Verdana;
-    font-size: large;
-    font-weight: bold;
-    
-}
-
-#content_container .work_content_text {
-    
-    font-size: small;
-    margin-left: 165px;
-    max-width: 350px;
-    padding-top: 6px;
-    padding-bottom: 10px;
-}
-
-#content_container .content_work_left {
-
-    float: left;
-    margin-left: 25px;
-    width: 200px;
-    background-color: #e6e2e3;
-    border-radius: 0 25px 7px 7px;
-    -moz-border-radius: 0 25px 7px 7px;
-    -webkit-border-radius: 0 25px 7px 7px;
-}
-
-#content_container .content_work_left p {
-
-    font-family: Verdana;
-    font-weight: bold;
-    font-size: 8.5pt;
-    padding-left: 5px;
-}
-
-#content_container .content_work_left_heading {
-
-    font-family: Verdana;
-    color: white;
-    font-weight: bold;
-    font-size: 15px;
-    text-align: left;
-    height: 35px;
-    padding: 5px;
-    
-}
-
-#content_container .content_work_nav_active {
-    
-    text-decoration: underline;
-}
-
-#content_container .content_work_center {
-
-    float: left;
-    width: 485px;
-    margin-left: 12px;
 }
 
 #content_container .para_image_left {
@@ -388,7 +301,7 @@ img {
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 1px solid #1a3721; 
+    border: 1px solid black; 
     width: 375px; height: auto;
     
 }
@@ -398,7 +311,7 @@ img {
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 1px solid #1a3721; 
+    border: 1px solid black; 
     width: 275px; height: auto;
  
 }
@@ -408,7 +321,7 @@ img {
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 1px solid #1a3721; 
+    border: 1px solid black; 
     width: 425px; height: auto;
    
 }
@@ -421,7 +334,7 @@ img {
     margin-bottom: 10px;
     width: 400px;
     height: auto;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
 
 
 }
@@ -435,7 +348,7 @@ img {
     margin-bottom: 10px;
     width: 75px;
     height: auto;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
 
 
 }
@@ -447,7 +360,7 @@ img {
     margin-bottom: 10px;
     width: 150px;
     height: auto;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
   
 
 }
@@ -459,7 +372,7 @@ img {
     margin-bottom: 10px;
     width: 100px;
     height: auto;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
    
 
 }
@@ -470,19 +383,18 @@ img {
     background-repeat: no-repeat;
     background-position: left;
     margin-left: 10px;
-    font-family: Verdana;
     vertical-align: middle;
     font-size: large;
 }
 
 #content_container .para_text_right {
-    
+    font-family: 'Cousine', sans-serif;
     margin-left: 385px;
     max-width: 300px;
 }
 
 #content_container .para_text_right_small {
-    
+    font-family: 'Cousine', sans-serif;
     margin-left: 285px;
     max-width: 300px;
 }
@@ -491,7 +403,7 @@ img {
 
 #content_details_small {
     
-    font-family: Verdana;
+font-family: 'Cousine', sans-serif;
 }
 
 #content_details_small .title {
@@ -503,7 +415,7 @@ img {
 }
 
 #content_details_small .text {
-    
+    font-family: 'Cousine', sans-serif;
     font-size: smaller;
     color: black;
     padding-bottom: 5px;
@@ -513,7 +425,7 @@ img {
     
     font-weight: bold;
     font-size: small;
-    color: #1a3721;
+    color: black;
     padding-bottom: 5px;
 }
 
@@ -541,7 +453,7 @@ img {
     
     font-weight: bold;
     font-size: large;
-    color: #1a3721;
+    color: black;
     padding-bottom: 5px;
 }
 
@@ -552,7 +464,7 @@ img {
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 1px solid #1a3721; 
+    border: 1px solid black; 
     width: 275px; height: auto;
    
 }
@@ -565,7 +477,7 @@ img {
     margin-bottom: 10px;
     width: 175px;
     height: auto;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
   
 
 }
@@ -576,7 +488,7 @@ img {
     width: 200px;
     height: 115px;
     margin: 0px 10px 10px 0;
-    border: 1px solid #1a3721; 
+    border: 1px solid black; 
       
 
 }
@@ -584,7 +496,7 @@ img {
 #content_container .about_form_container {
     
     background-color: #e6e2e3;
-    border-bottom: 1px solid #1a3721;
+    border-bottom: 1px solid black;
     width: 97.5%;
     height: 615px;
     padding: 10px;
@@ -596,12 +508,12 @@ img {
 
 #content_container .about_form_caption_box {
     
-    border: 1px solid  #1a3721;
+    border: 1px solid  black;
     background-color: white;
     font-size: small;
     padding: 10px;
     text-align: left;
-    color: #1a3721;
+    color: black;
 }
 
 #content_container .about_form_area {
@@ -649,7 +561,7 @@ img {
 
     width: 625px;
     height: 350px;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
     
 }
 
@@ -659,17 +571,17 @@ img {
     float: left;
     margin-right: 10px;
     margin-bottom: 10px;
-    border: 1px solid #1a3721; 
+    border: 1px solid black; 
     width: 100px; height: auto;
 }
 
 #content_container .read_more_right {
 
+font-family: 'Gruppo', cursive;
 
-    font-family: Verdana;
     padding-top: 0px;
     padding-bottom: 10px;
-    color: #1a3721;
+    color: black;
     text-align: right;
     font-size: 0.7em;
     font-weight: bolder;
@@ -678,11 +590,11 @@ img {
 
 #content_container .read_more_right_padded {
 
+font-family: 'Gruppo', cursive;
 
-    font-family: Verdana;
     padding-top: 0px;
     padding-bottom: 10px;
-    color: #1a3721;
+    color: black;
     text-align: right;
     font-size: 0.7em;
     font-weight: bolder;
@@ -691,26 +603,16 @@ img {
 
 #content_container .read_more_left {
 
+    font-family: 'Gruppo', cursive;
+
     padding-top: 0px;
     padding-bottom: 10px;
-    color: #1a3721;
+    color: black;
     text-align: left;
     margin-left: 0px;
     font-size: 0.7em;
     font-weight: bolder;
-    font-family: Verdana;
-}
 
-#content_container .read_more_left_live {
-
-    padding-top: 0px;
-    padding-bottom: 10px;
-    color: #1a3721;
-    text-align: left;
-    font-size: 0.7em;
-    margin-left: 125px;
-    font-weight: bold;
-    font-family: Verdana;
 }
 
 #content_container .content_spacer {
@@ -728,7 +630,7 @@ img {
 
 #content_container .content_spacer_left {
 
-    border: 1px solid #1a3721;
+    border: 1px solid black;
     width: 90%;
     margin: 0px;
 }
@@ -738,7 +640,7 @@ img {
 
     width: 100px;
     height: 100px;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
     
 }
 
@@ -750,7 +652,7 @@ img {
     width: 115px;
     height: 85px;
     margin: 0px 5px 5px 5px;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
     
     
 }
@@ -796,7 +698,7 @@ img {
     width: 100px;
     height: 75px;
     margin: 0px 0px 5px 5px;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
    
 }
 
@@ -821,7 +723,7 @@ img {
     font-size: small;
     margin-top: 7px;
     padding: 5px 10px 5px 5px;
-    background-color: #1a3721;
+    background-color: black;
     text-align: right;
     color: white;
    
@@ -831,7 +733,7 @@ img {
 
     padding-top: 0px;
     padding-bottom: 10px;
-    color: #1a3721;
+    color: black;
     text-align: left;
     margin-left: 0px;
     font-size: 10px;
@@ -859,7 +761,7 @@ img {
     margin-top: 7px;
     margin-bottom: 7px;
     padding: 3px 8px 3px 3px;
-    background-color: #1a3721;
+    background-color: black;
     text-align: right;
     color: white;
    
@@ -883,7 +785,7 @@ img {
     background-repeat: no-repeat;
     background-position: 95% 50%;
 */    
-    border: 1px solid  #1a3721;
+    border: 1px solid  black;
     background-color: white;
     width: 99.5%;
     height: 88px;
@@ -896,7 +798,7 @@ img {
     
     font-family: Verdana;
     font-weight: bold;
-    color: #1a3721;
+    color: black;
     font-size: larger;
     text-align: left;
     padding: 12px 5px 0px 5px;
@@ -925,9 +827,9 @@ img {
 /* editor stuff */
 
 #content_body {
-    
+
+    font-family: 'Cousine', sans-serif;
     color: black;
-    font-family: Verdana;
     font-size: 13px;
     margin-top: 5px;
     margin-bottom: 15px;
@@ -937,24 +839,23 @@ img {
 
     font-size: 13px;
     color: black;
-    font-family: Verdana;
+font-family: 'Cousine', sans-serif;
+
 }
 
 #content_body p {
-
+font-family: 'Cousine', sans-serif;
     font-size: 13px;
     color: black;
-    font-family: Verdana;
 /*    margin: 0;
     padding: 0;*/
     
 }
 
 #content_body span {
-
+font-family: 'Cousine', sans-serif;
     font-size: 13px;
     color: black;
-    font-family: Verdana;
     background-color: white;
 /*    margin: 0;
     padding: 0;*/
@@ -962,10 +863,9 @@ img {
 }
 
 #content_body b, strong {
-
+font-family: 'Cousine', sans-serif;
     font-size: 13px;
     color: black;
-    font-family: Verdana;
     font-style: bold;
 /*    margin: 0;
     padding: 0;*/
@@ -979,7 +879,7 @@ img {
 #content_body_truncated {
 
     color: black;
-    font-family: Verdana;
+font-family: 'Cousine', sans-serif;
     font-size: 13px;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -987,33 +887,33 @@ img {
 }
 
 #content_body_truncated .box {
-    
+    font-family: 'Cousine', sans-serif;
     float: left;
     width: 248px;
     margin-top: -5px;
 }
 
 #content_body_truncated .right {
-    
+    font-family: 'Cousine', sans-serif;
     margin-left: 385px;
     max-width: 300px;
     
 }
 
 #content_body_truncated .right_small {
-    
+    font-family: 'Cousine', sans-serif;
     margin-left: 285px;
     max-width: 300px;
 }
 
 #content_body_truncated .right_search {
-    
+    font-family: 'Cousine', sans-serif;
     margin-left: 385px;
     max-width: 300px;
 }
 
 #content_body_truncated .position_right {
-    
+    font-family: 'Cousine', sans-serif;
     margin-left: 385px;
     max-width: 300px;
 }
@@ -1022,11 +922,11 @@ img {
 /* more galleries drop-down */
 
 #content_container .block_more_galleries {
-   
+   font-family: 'Cousine', sans-serif;
     font-size: small;
     margin-top: 5px;
     padding: 3px;
-    background-color: #1a3721;
+    background-color: black;
    
 }
 
@@ -1052,8 +952,8 @@ img {
 #live_bullet_navigation li {
     
     list-style: none;
-    border-bottom: 0.1em solid #1a3721;
-    color: #1a3721;
+    border-bottom: 0.1em solid black;
+    color: black;
     padding: 3px;
 }
 
@@ -1206,7 +1106,7 @@ img {
     width: 218px;
     height: 135px;
     margin: 0px 0px 10px 0;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
     
 
     
@@ -1227,7 +1127,7 @@ img {
 /* Gallery stuff */
 
 #content_container .photo_gallery_mini {
-    cursor: pointer; width: 195px; height: auto; border: 1px solid #1a3721;
+    cursor: pointer; width: 195px; height: auto; border: 1px solid black;
     
     
 }
@@ -1243,7 +1143,7 @@ img {
     width: auto;
     max-width: 600px;
     height: 400px;
-    border: 1px solid #1a3721;
+    border: 1px solid black;
     
 }
 
@@ -1255,14 +1155,14 @@ img {
 }
 
 #photo_gallery_full img {
-        border: 1px solid #1a3721;
+        border: 1px solid black;
             height: 400px;
 
 
 }
 
 #content_container .photo_gallery_micro {
-    cursor: pointer; width:80px; height: auto; border: 1px solid #1a3721;
+    cursor: pointer; width:80px; height: auto; border: 1px solid black;
     
     
 }
@@ -1272,7 +1172,7 @@ img {
     position: relative;
     height: 18px;
     background-color: #e6e2e3;
-    color: #1a3721;
+    color: black;
     font-size: 1em;
     font-weight: bold;
     clear: both;
@@ -1386,15 +1286,15 @@ margin-top: -10px;
 /*    background-color: #e6e2e3;
 */    
    /* margin-left:0;
-    border: 1px solid #1a3721; */
+    border: 1px solid black; */
 }
 
 #footer_container {
 
     clear: both;
-    background-image: url('/FooterBground.png');
+/*    background-image: url('/FooterBground.png');
     background-repeat: no-repeat;
-    height: 200px;
+*/    height: 200px;
     border-radius: 0 0 5px 5px;
     -moz-border-radius: 0 0 5px 5px;
     -webkit-border-radius: 0 0 5px 5px;
@@ -1430,7 +1330,7 @@ margin-top: -10px;
     display: block;
     padding: 0px 145px 0px 0px;
     color: white;
-    background-color: #8dc73f;
+    background-color: #FD7221;
 }
 
 #footer_container a:visited {
@@ -1458,8 +1358,8 @@ margin-top: -10px;
 
 #content_message .message_box {
         
-    border: 2px solid  #1a3721;
-    background-color: #8bc53e;
+    border: 2px solid  black;
+    background-color: grey;
     width: 200px;
     height: auto;
     cursor: pointer;
@@ -1893,4 +1793,32 @@ div.dojoxCalendar tr.dojoxCal-MY-G-Template td.dijitCalendarSelectedDate {
     margin-left: 15px;
     margin-right: 15px;
     
+}
+
+@font-face {
+	font-family: neuropolitical ;
+	src: url('http://thoughtpivot.com/fonts/neuropolitical.otf');
+}
+
+@font-face {
+	font-family: scotosaurus ;
+	src: url('http://thoughtpivot.com/fonts/scotosaurus.ttf');
+}
+
+#thoughtpivot {
+color: black;
+text-wrap: none;
+text-align: right;
+padding: 10px;
+}
+
+#thoughtpivot a{
+color: black;
+text-decoration: none;
+}
+
+
+#thoughtpivot a:hover{
+text-decoration: none;
+color: #66bbee;
 }
